[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Access the current process of your Tauri application."
edition = { workspace = true }
license-file = { workspace = true }
links = "tauri-plugin-process"
name = "tauri-plugin-process"
repository = { workspace = true }
rust-version = { workspace = true }
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
