[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

[dependencies]
tauri = { version = "2.2.5" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Access the current process of your Tauri application."
edition = "2024"
license-file = "LICENSE"
links = "tauri-plugin-process-read-only"
name = "tauri-plugin-process-read-only"
repository = "https://github.com/tauri-apps/tauri"
rust-version = "1.85.0"
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
